Bug 1323027: IonMonkey - Remove empty blocks, r=jandem